; ModuleID = '/home/carl/AnghaBench/xLua/WebGLPlugins/extr_lbaselib.c_luaB_assert.c'
source_filename = "/home/carl/AnghaBench/xLua/WebGLPlugins/extr_lbaselib.c_luaB_assert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"assertion failed!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_assert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_assert(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @lua_toboolean(i32* %4, i32 1)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @lua_gettop(i32* %8)
  store i32 %9, i32* %2, align 4
  br label %21

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @luaL_checkany(i32* %11, i32 1)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @lua_remove(i32* %13, i32 1)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @lua_pushliteral(i32* %15, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @lua_settop(i32* %17, i32 1)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @luaB_error(i32* %19)
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %10, %7
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @lua_toboolean(i32*, i32) #1

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local i32 @luaL_checkany(i32*, i32) #1

declare dso_local i32 @lua_remove(i32*, i32) #1

declare dso_local i32 @lua_pushliteral(i32*, i8*) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @luaB_error(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
